浏览器拍照并下载

--- a/调用获取音视频接口实现拍照/index.html
+++ b/调用获取音视频接口实现拍照/index.html
@@ -9,7 +9,12 @@
 
 <body>
   <h1>Realtime communication with WebRTC</h1>
-  <video autoplay></video>
+  <video autoplay id="player"></video>
+  <br />
+  <button id="TakePhoto">Take</button>
+  <button id="save">保存</button>
+  <br />
+  <canvas id="picture"></canvas>
   <script src="./index.js"></script>
 </body>
 
